2018-01-24  Daniel Hahler  <zsh@thequod.de>

	* 42323: Completion/Unix/Command/_git: _git: move "local" statement
	out of loop.

2018-01-24  Peter Stephenson  <p.stephenson@samsung.com>

	* 42322 (tweaked): Src/hist.c, Src/zsh.h: don't discard a
	history line with just an interactive comment simply because
	there were no words, since the comment now doesn't produce
	words.

2018-01-23  Barton E. Schaefer  <schaefer@zsh.org>

	* Joey Pabalinas: 42313: Src/subst.c: avoid null-pointer deref
	when using ${(PA)...} on an empty array result

2018-01-23  Oliver Kiddle  <okiddle@yahoo.co.uk>

	* 42317: Completion/Linux/Command/_cryptsetup,
	Completion/Linux/Command/_ethtool, Completion/Unix/Command/_wget,
	Completion/Linux/Command/_tune2fs, Completion/Unix/Command/_cowsay,
	Completion/Unix/Command/_git, Completion/Unix/Command/_gsettings,
	Completion/Unix/Command/_gzip, Completion/Unix/Command/_ssh,
	Completion/Unix/Command/_sudo, Completion/Unix/Command/_tidy,
	Completion/Unix/Command/_tmux, Completion/Unix/Command/_truss:
	option updates for commands that have had recent updates

	* 42299: Completion/Zsh/Command/_typeset: correct optional argument

	* Matthew Martin: 42309: Completion/Unix/Command/_dhclient,
	Completion/Unix/Command/_id,  Completion/Unix/Command/_install:
	A few small updates for OpenBSD

2018-01-22  Peter Stephenson  <p.stephenson@samsung.com>

	* Daniel Tamelin: 42305: INSTALL: CVS should be git.

2018-01-20  Mikael Magnusson  <mikachu@gmail.com>

	* 42243: Src/Modules/pcre.c: Free stuff properly in zsh/pcre
	module

2018-01-19  Barton E. Schaefer  <schaefer@zsh.org>

	* dana: 41924: Doc/Zsh/params.yo: (wi) subscript flag interaction

	* Sebastian Gniazdowski: 41839: Functions/Misc/allopt: force IFS
	to default for "read"

2018-01-18  Peter Stephenson  <p.stephenson@samsung.com>

	* 42294: Completion/compinit: disable REPORTTIME in completion.

2018-01-16  Peter Stephenson  <p.stephenson@samsung.com>
